# json-no-escape

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
json_no_escape/: __init__.py  patch.py
