[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "json_no_escape"
version = "0.0.4"
authors = [
  { name="bigbenzh"},
]
description = "Set ensure_ascii=False by default"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Unlicense"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/bigbenzh/json-no-escape"
Issues = "https://github.com/bigbenzh/json-no-escape/issues"